Fixes zenpage search.php styling (wrong size fonts) Fixes full-image.php $album var overwrite Fixes news_article extracontent, codeblocks so they are availabel off the News page.
git-svn-id: http://www.zenphoto.org/svn/trunk@4928 46129fc4-274e-7f48-8cfa-5da4c607681c

--- a/themes/zenpage/style.css
+++ b/themes/zenpage/style.css
@@ -105,7 +105,7 @@ body {
 }
 
 #content-left h3 {
-	font-size: 1.4em;
+	font-size: 16px;
 	line-height: 1.1em;
 	margin-bottom: 0.3em;
 }
